# engram

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  HANDOFF.md  README.md  SNAPSHOT.md  TASKS.md  engram_memory_retrieval_implementation_phases.md  engram_phase_task_design_spec.md  engram_phase_task_implementation_phases.md  pyproject.toml  refined-mvp-plan.md
.github/workflows/: ci.yml
.jules/: bolt.md
agent-config/: AGENTS.md
agent-config/python-project-setup/: SKILL.md
codex-workflow-files/portfolio-readme/: SKILL.md
docs/: CODEX_HANDOFF_WORKFLOW_REDESIGN.md  CODEX_IMPLEMENTATION_PHASES_WORKFLOW_REDESIGN.md  DECISIONS.md  LESSONS.md  PLAN.md  PROJECT_BRIEF.md  TASKS.md  USER_MANUAL.md  mcp-codex-setup.md
src/engram/: USER_MANUAL.md  cli.py  db.py  (+1 more)
tests/: conftest.py  test_cli_entrypoint.py  test_context.py  test_context_cmds.py  test_db.py  test_db_schema.py  test_guardrail_cmds.py  test_max_lines_new_py_hook.py  test_mcp_main.py  test_mcp_project_tools.py  test_mcp_schemas.py  test_mcp_server.py  test_mcp_tools.py  test_memory.py  test_memory_cmds_generic.py  test_memory_retrieval_contract_utils.py  test_memory_retrieval_fts_query.py  test_memory_retrieval_fts_retriever.py  test_memory_retrieval_pack_contract.py  test_memory_retrieval_query_builder.py  test_memory_retrieval_semantic_index_storage.py  test_memory_retrieval_semantic_reindex.py  test_memory_retrieval_startup_orchestration.py  test_memory_supersession.py  test_phase.py  test_phase_cmds.py  test_phase_helpers.py  test_phase_migration.py  test_phase_persistence.py  test_phase_transitions.py  test_project.py  test_project_null_safety.py  test_py_structure_hook.py  test_services_context.py  test_services_errors.py  test_services_memory.py  test_services_phase.py  test_services_project.py  test_services_project_active.py  test_services_serializers.py  (+23 more)
(+146 files in other folders)
