[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.0"
description = "Agentic persistent memory system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=12.0.0",
]

[project.scripts]
engram = "engram.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
